lib/src/compiler/tests/testdata/errors/99.out
error[E027]: invalid integer
 --> line:2:15
  |
2 |    condition: 99999999999999999999
  |               ^^^^^^^^^^^^^^^^^^^^ this number is out of the valid range: [-9223372036854775808, 9223372036854775807]
  |